# TerminalRenderer

./: README.md
src/: CMakeLists.txt  Canvas.h  Model.h  Renderer.h  main.cpp
src/.cache/clangd/index/: Camera.h.639232F4CE305E18.idx  Canvas.h.5E472CA80AE6A819.idx  Matrix.h.8F19CD520F975F99.idx  Model.h.C8D88AD64075D974.idx  Renderer.h.3D5A4C557ABBFE6E.idx  main.cpp.DEF9E4664180C1F0.idx
src/src/: Camera.h  Canvas.h  Matrix.h  Renderer.h  main.cpp
